--- a/docker-cleutils/Dockerfile
+++ b/docker-cleutils/Dockerfile
@@ -1,103 +1,59 @@
-# Use a standard Ubuntu 20.04 base image
-FROM ubuntu:focal-20221130
-MAINTAINER David Spencer <dspencer@wustl.edu>
+# Start from Ubuntu 22.04 LTS for a modern, stable base
+FROM ubuntu:22.04
 
-LABEL cle_utilities="bioinformatics tools"
+# Add labels for metadata
+LABEL maintainer="David Spencer <dspencer@wustl.edu>"
+LABEL description="Bioinformatics tools with Python 3.11 and Mambaforge"
 
-# Set non-interactive frontend for package installations
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=America/Chicago
 
-# Install basic dependencies and add the deadsnakes PPA for newer Python versions
-RUN apt-get update && \
-    apt-get install -y software-properties-common && \
-    add-apt-repository ppa:deadsnakes/ppa && \
-    apt-get update && \
+# --- 1. Install Basic System Dependencies ---
+RUN apt-get update -y && \
     apt-get install -y --no-install-recommends \
-    build-essential \
     bzip2 \
+    ca-certificates \
     curl \
     wget \
-    g++ \
-    less \
-    libcurl4-openssl-dev \
-    libpng-dev \
-    libssl-dev \
-    libxml2-dev \
-    libnss-sss \
-    make \
-    ncurses-dev \
-    pkg-config \
-    unzip \
-    zip \
-    zlib1g-dev \
-    libbz2-dev \
-    liblzma-dev \
-    bc \
-    python3.11 \
-    python3.11-dev \
-    python3.11-distutils \
-    python3-pip \
     gawk \
+    tzdata \
     openssh-client \
-    bedtools && \
-    # Clean up apt cache to reduce image size
+    grep && \
+    # Set timezone
+    ln -sf /usr/share/zoneinfo/$TZ /etc/localtime && \
+    echo $TZ > /etc/timezone && \
+    dpkg-reconfigure --frontend noninteractive tzdata && \
+    # Clean up to reduce image size
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Update alternatives to make python3.11 the default python3
-RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 && \
-    update-alternatives --set python3 /usr/bin/python3.11
-
-# Ensure pip is up-to-date
-RUN python3 -m pip install --upgrade pip
-
-############################################################
-# BUILD HTSLIB, SAMTOOLS, AND BCFTOOLS FROM SOURCE (v1.21)
-############################################################
-
-ENV HTSLIB_INSTALL_DIR=/opt/htslib
-ENV SAMTOOLS_INSTALL_DIR=/opt/samtools
-ENV BCFTOOLS_INSTALL_DIR=/opt/bcftools
-ENV HTS_VERSION=1.21
-
-# HTSlib ${HTS_VERSION}
+# --- 2. Install Mambaforge and Create Conda Environment ---
+ENV CONDA_DIR /opt/conda
 WORKDIR /tmp
-RUN wget https://github.com/samtools/htslib/releases/download/${HTS_VERSION}/htslib-${HTS_VERSION}.tar.bz2 && \
-    tar -xjf htslib-${HTS_VERSION}.tar.bz2 && \
-    cd htslib-${HTS_VERSION} && \
-    ./configure --prefix=$HTSLIB_INSTALL_DIR && \
-    make && \
-    make install && \
-    rm -rf /tmp/htslib-${HTS_VERSION}*
+RUN mkdir ${CONDA_DIR} && \
+        wget --quiet "https://github.com/conda-forge/miniforge/releases/download/25.3.1-0/Miniforge3-25.3.1-0-Linux-x86_64.sh" -O /tmp/mamba.sh
 
-# Samtools ${HTS_VERSION}
-RUN wget https://github.com/samtools/samtools/releases/download/${HTS_VERSION}/samtools-${HTS_VERSION}.tar.bz2 && \
-    tar -xjf samtools-${HTS_VERSION}.tar.bz2 && \
-    cd samtools-${HTS_VERSION} && \
-    ./configure --prefix=$SAMTOOLS_INSTALL_DIR --with-htslib=$HTSLIB_INSTALL_DIR && \
-    make && \
-    make install && \
-    rm -rf /tmp/samtools-${HTS_VERSION}*
+RUN /bin/bash /tmp/mamba.sh -f -b -p $CONDA_DIR && \
+    rm /tmp/mamba.sh
 
-# bcftools ${HTS_VERSION}
-RUN wget https://github.com/samtools/bcftools/releases/download/${HTS_VERSION}/bcftools-${HTS_VERSION}.tar.bz2 && \
-    tar -xjf bcftools-${HTS_VERSION}.tar.bz2 && \
-    cd bcftools-${HTS_VERSION} && \
-    ./configure --prefix=$BCFTOOLS_INSTALL_DIR --with-htslib=$HTSLIB_INSTALL_DIR && \
-    make && \
-    make install && \
-    rm -rf /tmp/bcftools-${HTS_VERSION}*
+# Add /opt/conda/bin to PATH
+ENV PATH=/opt/conda/bin:$PATH
 
-# Add the new tools to the system PATH and library path
-ENV PATH=$HTSLIB_INSTALL_DIR/bin:$SAMTOOLS_INSTALL_DIR/bin:$BCFTOOLS_INSTALL_DIR/bin:$PATH
-ENV LD_LIBRARY_PATH=$HTSLIB_INSTALL_DIR/lib:$LD_LIBRARY_PATH
+# htslib version
+ARG HTSLIB_VERSION=1.21
 
-############################################################
-# INSTALL PYTHON PACKAGES
-############################################################
+# python version
+ARG PYTHON_VERSION=3.11
 
-RUN python3 -m pip install --no-cache-dir \
+# --- 3. Install All Software with a Single Mamba Command ---
+RUN mamba install -y -c conda-forge -c bioconda \
+    "python=${PYTHON_VERSION}" \
+    # Command-line tools
+    "htslib=${HTSLIB_VERSION}" \
+    "samtools=${HTSLIB_VERSION}" \
+    "bcftools=${HTSLIB_VERSION}" \
+    bedtools \
+    # Python libraries
     numpy \
     cython \
     pandas \
@@ -106,8 +62,7 @@ RUN python3 -m pip install --no-cache-dir \
     pyranges \
     scipy \
     openpyxl \
-    biopython \
-    natsort
+    biopython && \
+    # Clean up conda cache to save space
+    mamba clean -y --all
 
-# Set a default working directory for when the container starts
-WORKDIR /data
